syntax = "proto3";
package protoc;
option java_package = "com.keystone.cold.protobuf";
option java_outer_classname = "PayloadProtoc";

import "protos/transaction.proto";
import "protos/sign_transaction_result.proto";

message Payload {
    enum Type {
        TYPE_RESERVE = 0;
        TYPE_SYNC = 1;
        TYPE_SIGN_TX = 2;
        TYPE_SIGN_MSG = 3;
        TYPE_SIGN_MULTI_SIG = 4;
        TYPE_SYNC_MULTI_SIG_MSG = 5;
        TYPE_SIGN_ETH_MULTI_SIG_MSG = 6;
        TYPE_VERIFY_ADDRESS = 7;
        TYPE_STAKING = 8;
        TYPE_SIGN_TX_RESULT = 9;
    }

    Type type = 1;
    string xfp = 2;
    oneof Content {
        // Sync sync = 3;
        SignTransaction signTx = 4;
        // SignMessage signMsg = 5;
        // VerifyAddress verifyAddr = 6;
        SignTransactionResult signTxResult = 7;
    }
}
